--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@babel/cli": "^7.28.0",
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-jest": "^29.0.1",
     "jest": "^30.0.4",
     "jest-babel": "^1.0.1"
   },
