--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-jest": "^29.0.1",
     "jest": "^30.0.4",
-    "jest-babel": "^1.0.1"
+    "jest-babel": "^1.0.1",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
     "core-js": "^3.43.0"
