--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-jest": "^29.0.1",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^30.0.4",
     "jest-babel": "^1.0.1",
     "webpack": "^5.99.9",
